<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#09162A"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <!-- Add a loading animation or progress bar here -->
        <ProgressBar
            android:id="@+id/progress_bar_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="#FFC107" />
        <TextView
            android:id="@+id/text_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_bar_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="모니터링 데이터를 불러오는 중..."
            android:textSize="16sp"
            android:textColor="#FFC107"/>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0dp"
            android:spacing="0dp">

        <!-- RACK STATUS 헤더 -->
            <ImageView
                android:id="@+id/rack_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/rack_info"
                android:src="@drawable/ndp_info"/>

            <LinearLayout
                android:id="@+id/rack_info_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>

            <!-- FILECOIN NODE INFO 헤더 -->
            <ImageView
                android:id="@+id/node_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/node_info"
                android:src="@drawable/node_info"/>

            <LinearLayout
                android:id="@+id/node_info_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>

            <!-- ONBOARDING STATUS 헤더 -->
            <ImageView
                android:id="@+id/onboarding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/onboarding"
                android:src="@drawable/onboarding"/>

            <LinearLayout
                android:id="@+id/onboarding_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>

            <!-- 100G SWITCH -->
            <ImageView
                android:id="@+id/switch_40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/switch_40"
                android:src="@drawable/switch_100g"/>

            <LinearLayout
                android:id="@+id/switch_40_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>

            <!-- NODE/MINER -->
            <ImageView
                android:id="@+id/node_miner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/node_miner"
                android:src="@drawable/node_miner"/>

            <LinearLayout
                android:id="@+id/node_miner_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>

            <!-- POST WORKER -->
            <ImageView
                android:id="@+id/post_worker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/post_worker"
                android:src="@drawable/postworker"/>

            <LinearLayout
                android:id="@+id/post_worker_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>

            <!-- SUPRA WORKER 1 -->
            <ImageView
                android:id="@+id/pc2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/PC2_1"
                android:src="@drawable/supra"/>

            <LinearLayout
                android:id="@+id/pc2_1_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>

            <!-- SUPRA WORKER 2 -->
            <ImageView
                android:id="@+id/pc2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/PC2_2"
                android:src="@drawable/supra_none"/>

            <LinearLayout
                android:id="@+id/pc2_2_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>

            <!-- SUPRA WORKER 3 -->
            <ImageView
                android:id="@+id/pc2_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/PC2_3"
                android:src="@drawable/supra_none"/>

            <LinearLayout
                android:id="@+id/pc2_3_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>

            <!-- SUPRA WORKER 4 -->
            <ImageView
                android:id="@+id/storage_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Storage6"
                android:src="@drawable/supra_none"/>

            <LinearLayout
                android:id="@+id/storage_6_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>

            <!-- DEEPSEEK AI SERVER 1 -->
            <ImageView
                android:id="@+id/upscontroller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/upscontroller"
                android:src="@drawable/deepseek"
                android:layout_marginTop="-10dp"
                android:layout_marginBottom="-10dp"/>

            <LinearLayout
                android:id="@+id/upscontroller_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>

            <!-- DEEPSEEK AI SERVER 2 -->
            <ImageView
                android:id="@+id/storage_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Storage1"
                android:src="@drawable/deepseek_none"
                android:layout_marginTop="-19dp"
                android:layout_marginBottom="-10dp"/>

            <LinearLayout
                android:id="@+id/storage_1_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="-20dp"
                android:visibility="gone">
            </LinearLayout>

            <!-- GPU SERVER -->
            <ImageView
                android:id="@+id/storage_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Storage2"
                android:src="@drawable/aethir"
                android:layout_marginTop="-19dp"
                android:layout_marginBottom="-10dp"/>

            <LinearLayout
                android:id="@+id/storage_2_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>


            <!-- GPU SERVER -->

            <!-- STORAGE 1 -->
            <ImageView
                android:id="@+id/storage_dummy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-19dp"
                android:layout_marginBottom="-10dp"
                android:contentDescription="@string/Storage2"
                android:src="@drawable/aethir_none" />

            <ImageView
                android:id="@+id/storage_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Storage3"
                android:src="@drawable/filecoin"
                android:layout_marginTop="-19dp"
                android:layout_marginBottom="-10dp"/>

            <LinearLayout
                android:id="@+id/storage_3_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>

            <!-- STORAGE 2 -->
            <ImageView
                android:id="@+id/storage_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Storage4"
                android:src="@drawable/filecoin_none"
                android:layout_marginTop="-19dp"
                android:layout_marginBottom="-10dp"/>

            <LinearLayout
                android:id="@+id/storage_4_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>

            <!-- STORAGE 3 -->
            <ImageView
                android:id="@+id/storage_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Storage5"
                android:src="@drawable/filecoin_none"
                android:layout_marginTop="-19dp"
                android:layout_marginBottom="-10dp"/>

            <LinearLayout
                android:id="@+id/storage_5_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>


            <ImageView
                android:id="@+id/storage_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Storage5"
                android:src="@drawable/not_storage" />

            <!-- UPS CONTROLLER -->
            <ImageView
                android:id="@+id/ups_controller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="ups controller"
                android:src="@drawable/upscontroller"
                android:layout_marginTop="-9dp"/>

            <LinearLayout
                android:id="@+id/ups_controller_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>


            <!-- ZETACUBE 로고 -->
            <ImageView
                android:id="@+id/logo_zetacube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_zetacube"
                android:src="@drawable/logo_zetacube"
                android:layout_marginTop="1dp"/>

            <LinearLayout
                android:id="@+id/logo_zetacube_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>